--- a/eve/main.yml
+++ b/eve/main.yml
@@ -125,12 +125,13 @@ stages:
             /srv/scality/metalk8s-%(prop:metalk8s_short_version)s
           haltOnFailure: true
       - ShellCommand:
-          name: Sleep before bootstrap for debug
-          command: sleep 15m
-      - ShellCommand:
           name: Start the bootstrap process
           command: >
             sudo bash
             /srv/scality/metalk8s-%(prop:metalk8s_short_version)s/bootstrap.sh
           usePTY: true
-          haltOnFailure: true
+          haltOnFailure: false
+      - ShellCommand:
+          name: Sleep before bootstrap for debug
+          timeout: 3600
+          command: sleep 60m
