--- a/eve/main.yml
+++ b/eve/main.yml
@@ -198,16 +198,9 @@ stages:
             # TF_VAR_worker_uuid: "%(prop:worker_uuid)s"
             TF_VAR_nodes_count: "2"
           haltOnFailure: true
-      - SetPropertyFromCommand:
-          name: Save spawned router IP
-          workdir: build/eve/workers/openstack-multiple-nodes/terraform/
-          property: router_ip
-          command: terraform output router_ip
       - ShellCommand:
-          name: Configure SSH config for bootstrap node
-          command: >
-            sed -i s/IP_ADDRESS/$(terraform output bootstrap_ip)/
-            bootstrap_ssh_config
+          name: Generate SSH config from Terraform state
+          command: bash generate-ssh-config.sh
           workdir: build/eve/workers/openstack-multiple-nodes/terraform/
           haltOnFailure: true
       - ShellCommand:
@@ -215,27 +208,27 @@ stages:
           command: |-
             for _ in $(seq 1 12); do
               sleep 5
-              ssh -F bootstrap_ssh_config bootstrap id && break
+              ssh -F ssh_config bootstrap id && break
             done;
           workdir: build/eve/workers/openstack-multiple-nodes/terraform/
           haltOnFailure: true
       - ShellCommand:
           name: Copy ISO to bootstrap node
           command: >
-            scp -F bootstrap_ssh_config ../../../../metalk8s.iso bootstrap:
+            scp -F ssh_config ../../../../metalk8s.iso bootstrap:
           workdir: build/eve/workers/openstack-multiple-nodes/terraform/
           haltOnFailure: true
       - ShellCommand:
           name: Create mountpoint in bootstrap node
           command: >
-            ssh -F bootstrap_ssh_config bootstrap
+            ssh -F ssh_config bootstrap
             sudo mkdir -p /srv/scality/metalk8s-%(prop:metalk8s_short_version)s
           workdir: build/eve/workers/openstack-multiple-nodes/terraform/
           haltOnFailure: true
       - ShellCommand:
           name: Mount ISO image in bootstrap node
           command: >
-            ssh -F bootstrap_ssh_config bootstrap
+            ssh -F ssh_config bootstrap
             sudo mount -o loop metalk8s.iso
             /srv/scality/metalk8s-%(prop:metalk8s_short_version)s
           workdir: build/eve/workers/openstack-multiple-nodes/terraform/
@@ -243,41 +236,41 @@ stages:
       - ShellCommand:
           name: Copy bootstrap configuration file in bootstrap node
           command: >
-            ssh -F bootstrap_ssh_config bootstrap
+            ssh -F ssh_config bootstrap
             sudo mkdir -p /etc/metalk8s &&
-            scp -F bootstrap_ssh_config bootstrap.yaml bootstrap: &&
-            ssh -F bootstrap_ssh_config bootstrap
+            scp -F ssh_config bootstrap.yaml bootstrap: &&
+            ssh -F ssh_config bootstrap
             sudo mv bootstrap.yaml /etc/metalk8s
           workdir: build/eve/workers/openstack-multiple-nodes/terraform/
           haltOnFailure: true
       - ShellCommand:
           name: Start the bootstrap process in bootstrap node
           command: >
-            ssh -F bootstrap_ssh_config bootstrap
+            ssh -F ssh_config bootstrap
             sudo bash
             /srv/scality/metalk8s-%(prop:metalk8s_short_version)s/bootstrap.sh
           workdir: build/eve/workers/openstack-multiple-nodes/terraform/
           haltOnFailure: true
       - ShellCommand:
-          name: Set-up IP-to-IP tunnel on worker side
+          name: Set-up IP-to-IP tunnel on the worker
           command: >
             sudo bash setup-ipip-tunnel.sh
-            --remote-ip %(prop:router_ip)s
+            --remote-ip $(terraform output -json ips | jq -r .value.router)
             --local-ip $(ip -4 a s eth0 | grep -oP '(?<=inet\s)\d+(\.\d+){3}')
             --eve-worker
           workdir: build/eve/workers/openstack-multiple-nodes/terraform/
       - ShellCommand:
-          name: Set-up IP-to-IP tunnel on bootstrap side
+          name: Set-up IP-to-IP tunnel on the router
           command: >
-            ssh -i /home/eve/.ssh/terraform %(prop:router_ip)s
+            ssh -F ssh_config router
             sudo bash /home/centos/setup-ipip-tunnel.sh
             --remote-ip $(ip -4 a s eth0 | grep -oP '(?<=inet\s)\d+(\.\d+){3}')
-            --local-ip %(prop:router_ip)s
+            --local-ip $(terraform output -json ips | jq -r .value.router)
           workdir: build/eve/workers/openstack-multiple-nodes/terraform/
       - ShellCommand:
           name: Install kubectl on the boostrap node
           command: >
-            ssh -F bootstrap_ssh_config bootstrap
+            ssh -F ssh_config bootstrap
             sudo yum install -y kubectl --disablerepo=*
             --enablerepo=metalk8s-kubernetes
           workdir: build/eve/workers/openstack-multiple-nodes/terraform/
@@ -285,7 +278,7 @@ stages:
           name: Run tests on the bootstrap node
           env:
             SSH_CONFIG_FILE: >-
-              eve/workers/openstack-multiple-nodes/terraform/bootstrap_ssh_config
+              eve/workers/openstack-multiple-nodes/terraform/ssh_config
             ISO_MOUNTPOINT: >-
               /srv/scality/metalk8s-%(prop:metalk8s_short_version)s
             TEST_HOSTS_LIST: bootstrap
