--- a/eve/main.yml
+++ b/eve/main.yml
@@ -183,8 +183,8 @@ stages:
             ISO_MOUNTPOINT: >
               /srv/scality/metalk8s-%(prop:metalk8s_short_version)s
           command: >
-            tox -e tests-local -- -m "ci and not slow" &&
-            tox -e tests-local -- -m "ci and slow"
+            tox -e tests-local -- -m "ci and not multinodes and not slow" &&
+            tox -e tests-local -- -m "ci and not multinodes and slow"
           haltOnFailure: true
       - ShellCommand:
           name: Cypress test
