ci: dump the SSH config of every node
This will be useful when we want to get the IP from the hostname in our
test suite.

Refs: #982
Signed-off-by: Sylvain Laperche <sylvain.laperche@scality.com>

--- a/tox.ini
+++ b/tox.ini
@@ -97,7 +97,7 @@ passenv =
 setenv =
     VAGRANT_CWD={toxinidir}
 commands_pre =
-    - bash -c "vagrant ssh-config bootstrap > {envdir}/vagrant_ssh_config"
+    - bash -c "vagrant ssh-config > {envdir}/vagrant_ssh_config"
 commands =
     pytest \
          --ssh-config={env:SSH_CONFIG_FILE:{envdir}/vagrant_ssh_config} \
