--- a/tox.ini
+++ b/tox.ini
@@ -120,6 +120,7 @@ commands =
 markers =
     ci: tag a BDD feature as part of CI test suite
     local: tag a BDD feature as part of local test suite
+    install: tag a BDD feature as an installation scenario
     post: tag a BDD feature as a post-installation test
     slow: tag a BDD feature as a long running test
     ui: tag a BDD feature as related to MetalK8s UI
