--- a/eve/main.yml
+++ b/eve/main.yml
@@ -461,9 +461,8 @@ stages:
             SSH_CONFIG: >-
               eve/workers/openstack-multiple-nodes/terraform/ssh_config
           command: >
-            scp -F $SSH_CONFIG eve/create-volumes.sh:./create-volumes.sh &&
+            scp -F $SSH_CONFIG eve/create-volumes.sh bootstrap:./create-volumes.sh &&
             ssh -F $SSH_CONFIG bootstrap sudo
-                BOOTSTRAP_NODE_NAME=\$(hostname)
                 PRODUCT_TXT=/var/tmp/metalk8s/product.txt
                 PRODUCT_MOUNT=/var/tmp/metalk8s
                 bash -x ./create-volumes.sh
