--- a/eve/main.yml
+++ b/eve/main.yml
@@ -292,11 +292,10 @@ stages:
       - ShellCommand:
           name: Provision Prometheus and AlertManager storage
           command: >
-            sudo
-                BOOTSTRAP_NODE_NAME=\$(hostname)
+            sudo env
                 PRODUCT_TXT=/var/tmp/metalk8s/product.txt
                 PRODUCT_MOUNT=/var/tmp/metalk8s
-                bash eve/create-volumes.sh
+                eve/create-volumes.sh
           haltOnFailure: true
       - ShellCommand:
           name: Install kubectl for running tests
@@ -462,10 +461,11 @@ stages:
               eve/workers/openstack-multiple-nodes/terraform/ssh_config
           command: >
             scp -F $SSH_CONFIG eve/create-volumes.sh bootstrap:./create-volumes.sh &&
-            ssh -F $SSH_CONFIG bootstrap sudo
+            ssh -F $SSH_CONFIG bootstrap
+                sudo env
                 PRODUCT_TXT=/var/tmp/metalk8s/product.txt
                 PRODUCT_MOUNT=/var/tmp/metalk8s
-                bash -x ./create-volumes.sh
+                ./create-volumes.sh
           haltOnFailure: true
       - ShellCommand:
           name: Install kubectl on the boostrap node
