WIP - Solution Operator + components changes

--- a/examples/metalk8s-solution-example/example-operator/deploy/crds/examplesolution_v1alpha1_clockserver_cr.yaml
+++ b/examples/metalk8s-solution-example/example-operator/deploy/crds/examplesolution_v1alpha1_clockserver_cr.yaml
@@ -1,7 +1,7 @@
 apiVersion: example-solution.metalk8s.scality.com/v1alpha1
-kind: Example
+kind: ClockServer
 metadata:
-  name: example-example
+  name: example-clockserver
 spec:
   # Add fields here
   size: 3
