--- a/examples/metalk8s-solution-example/example-operator/deploy/crds/examplesolution_v1alpha1_clockserver_crd.yaml
+++ b/examples/metalk8s-solution-example/example-operator/deploy/crds/examplesolution_v1alpha1_clockserver_crd.yaml
@@ -1,14 +1,14 @@
 apiVersion: apiextensions.k8s.io/v1beta1
 kind: CustomResourceDefinition
 metadata:
-  name: examples.example-solution.metalk8s.scality.com
+  name: clockservers.example-solution.metalk8s.scality.com
 spec:
   group: example-solution.metalk8s.scality.com
   names:
-    kind: Example
-    listKind: ExampleList
-    plural: examples
-    singular: example
+    kind: ClockServer
+    listKind: ClockServerList
+    plural: clockservers
+    singular: clockserver
   scope: Namespaced
   subresources:
     status: {}
@@ -29,16 +29,14 @@ spec:
           type: object
         spec:
           properties:
-            replicas:
-              description: Number of example Pods to run as part of the Solution
-              format: int32
-              minimum: 1
-              type: integer
+            timezone:
+              description: Timezone for this clock, in the format UTC[+/-]HH:MM
+              type: string
             version:
-              description: Version of the example Pods container image
+              description: The version of the container image to run
               type: string
           required:
-          - replicas
+          - timezone
           - version
           type: object
         status:
