rename resolution feature

--- a/tox.ini
+++ b/tox.ini
@@ -99,8 +99,8 @@ commands_pre =
     - bash -c "vagrant ssh-config > {envdir}/vagrant_ssh_config"
 commands =
     pytest \
-         #--ssh-config={env:SSH_CONFIG_FILE:{envdir}/vagrant_ssh_config} \
-         #--hosts={env:TEST_HOSTS_LIST:bootstrap} \
+         --ssh-config={env:SSH_CONFIG_FILE:{envdir}/vagrant_ssh_config} \
+         --hosts={env:TEST_HOSTS_LIST:bootstrap} \
          --iso-root={env:ISO_MOUNTPOINT:/vagrant/_build/root} \
          {posargs:-m local} tests
 
